add new keys and values

--- a/public/projects.json
+++ b/public/projects.json
@@ -2,19 +2,25 @@
   {
     "id": 0,
     "name": "Portfolio",
-    "description": "A little corner of the web where I share my projects and coding journey.",
-    "link": "tbd"
+    "shortDescription": "A little corner of the web where I share my projects and coding journey.",
+    "longDescription": "My portfolio was born from the desire to code independently after finishing the Digital Academy. I wanted to showcase my skills and create my own space, on my own terms and timeline. I really enjoyed the process, and if you’re reading this, it means you’ve already taken a look! I’m always open to suggestions on how to improve or add cool new features.",
+    "websiteUrl": "tbd",
+    "repositoryUrl": "https://github.com/karolinaviragova/my-portfolio"
   },
   {
     "id": 1,
     "name": "PawHelp",
-    "description": "A web application designed to help users find veterinary care in Prague.",
-    "link": "https://paw-help.netlify.app"
+    "shortDescription": "A web application designed to help users find veterinary care in Prague.",
+    "longDescription": "PawHelp is a web application designed to help users find veterinary care in Prague. You can choose from veterinary emergency services, regular clinics, or even a vet who comes to your home. The app also shows your location and the distance to each option. I created this project as part of my final assignment during the Digital Academy Web, working together with my partner and mentors. It was a fun but challenging weekend of coding! We used cool tools like React Query, Apify scraper for data handling, Tailwind CSS for styling, and pre-made components from ShadCN UI.",
+    "websiteUrl": "https://paw-help.netlify.app",
+    "repositoryUrl": "https://github.com/karolinaviragova/paw-help"
   },
   {
     "id": 2,
     "name": "Tic-tac-toe",
-    "description": "A tic-tac-toe game where you can play solo against the AI.",
-    "link": "https://karolinaviragova.github.io/piskvorky/"
+    "shortDescription": "A tic-tac-toe game where you can play solo against the AI.",
+    "longDescription": "This was a step-by-step project completed during the academy, starting from the basics with HTML and CSS. Over time, we added JavaScript functions to handle game logic, and finally integrated an AI-powered API so I could play against the computer. It was a great way to apply and build my skills progressively, combining frontend basics with more advanced features like API integration and game mechanics.",
+    "websiteUrl": "https://karolinaviragova.github.io/piskvorky/",
+    "repositoryUrl": "https://github.com/karolinaviragova/piskvorky"
   }
 ]
