add project url to my portfolio

--- a/public/projects.json
+++ b/public/projects.json
@@ -4,7 +4,7 @@
     "name": "Portfolio",
     "shortDescription": "A little corner of the web where I share my projects and coding journey.",
     "longDescription": "My portfolio was born from the desire to code independently after finishing the Digital Academy. I wanted to showcase my skills and create my own space, on my own terms and timeline. I really enjoyed the process, and if you’re reading this, it means you’ve already taken a look! I’m always open to suggestions on how to improve or add cool new features.",
-    "websiteUrl": "tbd",
+    "websiteUrl": "https://karolinaviragova.netlify.app",
     "repositoryUrl": "https://github.com/karolinaviragova/my-portfolio"
   },
   {
